# Mandelbrot-set

./: .gitignore  CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  README.md  assets.hpp  complex.cpp  complex.h  main.cpp  mathIn.h
src/: Mandelbrot.cpp  Mandelbrot.h  complex.cpp  complex.h  main.cpp
